# activitymanager-wheeled

./: CMakeLists.txt  ChangeLog  README  README.md  activitymanager.cpp  activitymanager.h  activitywidget.cpp  activitywidget.h  plasma-applet-activitymanager.desktop
